css/qb-mixed-calculator.css
/*Options list style*/
.payment_option_list ul{
    list-style: none;
    border: 2px #000 solid;
}
.payment_option_list{
    width: 10%;
    float: right;
}
/*Calculator full display*/
.calculator{
    width: 50%;
    float: left;
}
.hide{
    display: none;
}
/*table design*/
table td{
    border:2px #6e6c6c solid;
    width: 120px;
}
td input{
    width: 80%;
}
#column-totals-row{
    height: 25px;
}

